apparently spring 4.0.1 is the answer?  also, using /queue instead of /topic apparently makes a difference?  automagical can suck sometimes.

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
   <properties>
     <start-class>com.theotherian.chat.Application</start-class>
+    <spring.version>4.0.1.RELEASE</spring.version>
   </properties>
 
   <build>
