--- a/pom.xml
+++ b/pom.xml
@@ -88,5 +88,10 @@
       <artifactId>javax.inject</artifactId>
       <version>1</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>16.0</version>
+    </dependency>
   </dependencies>
 </project>
