--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.theotherian.chat</groupId>
   <artifactId>spring-stomp-chat</artifactId>
-  <version>trunk-SNAPSHOT</version>
+  <version>1.1.0</version>
   <name>spring-stomp-chat</name>
 
   <parent>
