--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,11 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.0.0.RC1</version>
+    <version>1.2.7.RELEASE</version>
   </parent>
 
   <properties>
     <start-class>com.theotherian.chat.Application</start-class>
-    <spring.version>4.0.1.RELEASE</spring.version>
   </properties>
 
   <build>
@@ -22,8 +21,8 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
